# stairway-to-python

./: .gitignore  01 - Introdução.ipynb  01-introdução.html  02 - Variáveis e Tipos Básicos.ipynb  02a - Strings, Regex e UNICODE.ipynb  02a - Strings, codificação e Unicode.ipynb  02b - Arquivos.ipynb  03 - Controle de Fluxo, Exceções e Laços.ipynb  03a - Funções.ipynb  04 - Listas, Dicionários, Tuplas e tudo mais.ipynb  05 - Comprehensions.ipynb  05 - Listas, Dicionários, Tuplas e tudo mais.ipynb  06 - Comprehensions.ipynb  07 - Orientação à Objetos - O estilo Python.ipynb  08 - Introdução Biopython, Seq, Seqrecord.ipynb  09 - Python e a Internet.ipynb  09 - SeqIO.ipynb  10 - Blast.ipynb  5 - SeqIO.ipynb  Blast.ipynb  Introdução Biopython.ipynb  README.md  dna_message.decoded  dna_message.dna  environment.yml  execi.fa  gene.xml  index.html  message.txt  message.txt.dna  my_seq.fa  pyproject.toml  requirements.txt  sequence.gb
apps/: Biopython.ipynb  Gráficos.ipynb  Monte Carlo.ipynb  Pandas.ipynb  Plantas e Árvores de Decisão.ipynb  Tumores e Florestas Aleatórias.ipynb
apps/data/: plantas.csv
